init implement feature authenticate . include login , logout, login with google